	Edited file /themes/Default/css/main.css

User Admin: fixed issue preventing some staff from showing in the Manage Staff > Add Staff list of staff
	Edited file /modules/User Admin/staff_manage_add.php

Library: added import function to make setting up a library/inventory system easier
	New values in gibbonAction, gibbonPermission
	New file /modules/Library/library_import.php

v8.2.00
-------
General: added system-wide notifications, which can be utilised by any module
	New table gibbonNotification
	Edited files /functions.php, /index.php
	New files /themes/Default/img/notifications_off.png, notifications_on.png
	New files /themes/Olden/img/notifications_off.png, notifications_on.png
	Edited file /themes/Default/img/like_off.png
	New files /notifications*.php
	Edited files /modules/Crowd Assessment/crowdAssess*.php

Planner: gave students auto-set homework due date and time, just like teachers have
	Edited file /modules/Planner/planner_view_full.php

Students: added student ID to summary page
	Edited file /modules/Students/student_view_details.php

General: updated to latest tinymce
	Replaced files in /lib/tinymce
	Edited files /index.php, functions.php

Roll Groups: added ability to reverse ordering of students
	Edited file /modules/Roll Group/rollGroups_details.php
	Edited file /functions.php

Activities: added per-activity control to determine whether or not registration is allowed
	Edited table gibbonActivity
	Edited files /modules/Activities/activities_manage_add*.php, activities_manage_edit*.php, activities_view.php, activities_view_register*.php

Messenger: added ability to target role categories
	Edited table gibbonMessengerTarget
	Edited files /modules/Messenger/messenger_post.php

Students: added parents vehicle registration field to Family section
	Edited file /modules/Students/student_view_details.php

General: fixed post-TinyMCE upgrade issue with the height of textareas.
	Edited file /functions.php
